unpackaged/main/default/objects/Vehicle_Master__c/Vehicle_Master__c.object-meta.xml
<CustomObject>
    <description>Emirates Transport Oracle Vehicle Master</description>
    <label>ET Vehicle Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ET Vehicle Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>