unpackaged/main/default/objects/Vehicle_Master__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ET Vehicle Masters</relationshipLabel>
    <relationshipName>ET_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>