unpackaged/main/default/objects/Vehicle_Master__c/fields/Activity_Center__c.field-meta.xml
<CustomField>
    <fullName>Activity_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>