unpackaged/main/default/objects/Vehicle_Master__c/fields/Activity_Center_code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Center_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Center code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>