unpackaged/main/default/objects/Vehicle_Master__c/fields/Business_Classification__c.field-meta.xml
<CustomField>
    <fullName>Business_Classification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>