unpackaged/main/default/objects/Vehicle_Master__c/fields/Current_Gate_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Gate_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Gate Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>