unpackaged/main/default/objects/Vehicle_Master__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>