unpackaged/main/default/objects/Vehicle_Master__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>