unpackaged/main/default/objects/Vehicle_Master__c/fields/Fuel_Tank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Tank_Capacity__c</fullName>
    <label>Fuel Tank Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>