unpackaged/main/default/objects/Vehicle_Master__c/fields/Internal_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Internal No</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>