unpackaged/main/default/objects/Vehicle_Master__c/fields/Last_KM_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_KM_Reading__c</fullName>
    <label>Last KM Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>