unpackaged/main/default/objects/Vehicle_Master__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <label>Model (Year)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>