unpackaged/main/default/objects/Vehicle_Master__c/fields/Operating_unit__c.field-meta.xml
<CustomField>
    <fullName>Operating_unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating unit</label>
    <referenceTo>ETSALES_Operating_unit__c</referenceTo>
    <relationshipLabel>ET Vehicle Masters</relationshipLabel>
    <relationshipName>ET_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>