unpackaged/main/default/objects/Vehicle_Master__c/fields/Operation_Status__c.field-meta.xml
<CustomField>
    <fullName>Operation_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operation Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>