unpackaged/main/default/objects/Vehicle_Master__c/fields/Plate_colour_code__c.field-meta.xml
<CustomField>
    <fullName>Plate_colour_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate colour code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>