unpackaged/main/default/objects/Vehicle_Master__c/fields/Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Plate_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>