unpackaged/main/default/objects/Vehicle_Master__c/fields/Plate_Type__c.field-meta.xml
<CustomField>
    <fullName>Plate_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>