unpackaged/main/default/objects/Vehicle_Master__c/fields/TC_Number__c.field-meta.xml
<CustomField>
    <fullName>TC_Number__c</fullName>
    <label>TC Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>