unpackaged/main/default/objects/Vehicle_Master__c/fields/Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>